# Maestro

./: .gitignore  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  NOTICE  README.md  config.example.yaml  docker-compose.yml  go.mod  go.sum  go.work  go.work.sum  register.go  sharding.go  tidy.sh
.claude/: launch.json  settings.json
.github/workflows/: ci.yml  docs.yml  publish-maven.yml  publish-pypi.yml
activities/: doc.go  simulated.go  types.go  validate.go
backends/kubernetes/: Dockerfile  README.md  adapter.go  adapter_test.go  flink.go  go.mod  go.sum  leases.go
cmd/control-api/: main.go
cmd/loadgen/: main.go
cmd/worker/: main.go
control/: doc.go  service.go  service_test.go
deploy/local/: Makefile  kind-cluster.yaml
docs/: SCALING.md  api-compatibility.md  index.html
docs-site/: docusaurus.config.js  package-lock.json  sidebars.js
docs-site/docs/: comparison.md  getting-started.md  intro.md  mcp.md
docs/adr/: 0001-public-library-boundary.md
domain/: change.go  doc.go  list.go
examples/demo/: run.sh
examples/flink-job/: pom.xml
examples/wikimedia-producer/: go.mod  go.sum  main.go
internal/api/: server.go  server_test.go  ui.go
internal/auth/: auth.go
internal/config/: config.go
mcp/: pyproject.toml  server.py
sdk/go/: go.mod
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: kafka_lag_autoscaler.py
sdk/python/maestro_sdk/: __init__.py  autoscaler.py  client.py
workflows/: cluster_actor.go  deployment_actor.go  rollout.go  rollout_test.go  savepoint.go
(+50 files in other folders)
