[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cohestra-mcp"
version = "0.1.0"
description = "MCP server for the Cohestra Flink control plane"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0",
    "cohestra-sdk>=0.1.1",
]

[project.scripts]
cohestra-mcp = "server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["."]
