[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maestro-flink-sdk"
version = "0.1.0"
description = "Python SDK for the Maestro Flink Control Plane"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
lambda = ["boto3"]
dev = ["pytest", "responses"]

[project.urls]
Homepage = "https://github.com/maestro-flink/maestro"
Documentation = "https://maestro.sh/docs"
